* JBQA-2616 facelift of hudson jobs for richfaces-demo - added profiles to run tests with jboss5x and tomcat6x using Cargo (Maven Cargo Plugin) - refactored usage of testng.xml (removed profiles for various OS) - backing-compability of the pom usage should be preserved