@@ -1,10 +1,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+	<parent>
+		<groupId>org.richfaces</groupId>
+		<artifactId>samples</artifactId>
+		<version>3.3.3-SNAPSHOT</version>
+	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.jboss.richfaces.integrationTest</groupId>
 	<artifactId>selenium-test</artifactId>
 	<packaging>jar</packaging>
-	<version>1.0-SNAPSHOT</version>
 	<name>selenium-test</name>
 	<url>http://maven.apache.org</url>
 	<repositories>
@@ -35,6 +39,7 @@
 		</pluginRepository>
 	</pluginRepositories>
 	<properties>
+		<demo.version>${project.version}</demo.version>
 		<resources.dir>${project.build.directory}/test-classes</resources.dir>
 		<extensions.dir>${resources.dir}/user-extensions</extensions.dir>
 		<browser></browser>
@@ -46,10 +51,6 @@
 	<build>
 		<finalName>seleniumTest</finalName>
 		<testResources>
-			<testResource>
-				<directory>src/test/profiles/${os.family}</directory>
-				<filtering>true</filtering>
-			</testResource>
 			<testResource>
 				<directory>src/test/resources</directory>
 				<includes>
@@ -73,47 +74,6 @@
 				</configuration>
 			</plugin>
 			<plugin>
-				<artifactId>maven-dependency-plugin</artifactId>
-				<executions>
-					<execution>
-						<id>unpack-user-extensions</id>
-						<phase>generate-test-resources</phase>
-						<goals>
-							<goal>unpack-dependencies</goal>
-						</goals>
-						<configuration>
-							<includeGroupIds>org.jboss.test</includeGroupIds>
-							<includeArtifactIds>selenium</includeArtifactIds>
-							<includes>jbossqa-extensions.js</includes>
-							<outputDirectory>${extensions.dir}</outputDirectory>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<artifactId>maven-antrun-plugin</artifactId>
-				<executions>
-					<execution>
-						<id>concatenate-extensions</id>
-						<phase>process-test-resources</phase>
-						<goals>
-							<goal>run</goal>
-						</goals>
-						<configuration>
-							<tasks>
-								<concat destfile="${resources.dir}/custom-extensions.js"
-									fixlastline="yes">
-									<!--  space-separated list of files -->
-									<filelist dir="${extensions.dir}"
-										files="jbossqa-extensions.js rfqa-extensions.js" />
-								</concat>
-								<delete dir="${project.build.directory}/test-classes/user-extensions" />
-							</tasks>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>2.4.3</version>
@@ -126,23 +86,31 @@
 				</configuration>
 				<executions>
 					<execution>
+						<id>surefire-it</id>
 						<phase>integration-test</phase>
 						<goals>
 							<goal>test</goal>
 						</goals>
 						<configuration>
-							<skip>false</skip>
-							<suiteXmlFiles>
-								<suiteXmlFile>${resources.dir}/testng.xml</suiteXmlFile>
-							</suiteXmlFiles>
-							<argLine>-Dbrowser='${browser}' -Dcontext.root='${context.root}' -Dcontext.path='${context.path}' -Dselenium.port='${selenium.port}'</argLine>
+							<skip>true</skip>
 						</configuration>
 					</execution>
 				</executions>
 			</plugin>
 		</plugins>
+
 	</build>
 	<profiles>
+		<!--
+		  **********************
+		  ** Integration Test **
+		  **********************
+		  If -Dmaven.test.skip isn't specified,
+		  unpacks user extensions from selenium-testing-lib,
+		  concatenate both (selenium-testing-lib and own) extensions to one file,
+		  starts selenium core server
+		  and runs surefire test (testng selenium tests).
+		 -->
 		<profile>
 			<id>integration-test</id>
 			<activation>
@@ -152,6 +120,48 @@
 			</activation>
 			<build>
 				<plugins>
+					<plugin>
+						<artifactId>maven-dependency-plugin</artifactId>
+						<executions>
+							<execution>
+								<id>unpack-user-extensions</id>
+								<phase>generate-test-resources</phase>
+								<goals>
+									<goal>unpack-dependencies</goal>
+								</goals>
+								<configuration>
+									<includeGroupIds>org.jboss.test</includeGroupIds>
+									<includeArtifactIds>selenium</includeArtifactIds>
+									<includes>jbossqa-extensions.js</includes>
+									<outputDirectory>${extensions.dir}</outputDirectory>
+								</configuration>
+							</execution>
+						</executions>
+					</plugin>
+					<plugin>
+						<artifactId>maven-antrun-plugin</artifactId>
+						<executions>
+							<execution>
+								<id>concatenate-extensions</id>
+								<phase>process-test-resources</phase>
+								<goals>
+									<goal>run</goal>
+								</goals>
+								<configuration>
+									<tasks>
+										<concat destfile="${resources.dir}/custom-extensions.js"
+											fixlastline="yes">
+											<!--  space-separated list of files -->
+											<filelist dir="${extensions.dir}"
+												files="jbossqa-extensions.js rfqa-extensions.js" />
+										</concat>
+										<delete
+											dir="${project.build.directory}/test-classes/user-extensions" />
+									</tasks>
+								</configuration>
+							</execution>
+						</executions>
+					</plugin>
 					<plugin>
 						<groupId>org.codehaus.mojo</groupId>
 						<artifactId>selenium-maven-plugin</artifactId>
@@ -170,41 +180,175 @@
 							</execution>
 						</executions>
 					</plugin>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-surefire-plugin</artifactId>
+						<version>2.4.3</version>
+						<executions>
+							<execution>
+								<id>surefire-it</id>
+								<phase>integration-test</phase>
+								<goals>
+									<goal>test</goal>
+								</goals>
+								<configuration>
+									<skip>false</skip>
+									<suiteXmlFiles>
+										<suiteXmlFile>src/test/resources/testng.xml</suiteXmlFile>
+									</suiteXmlFiles>
+									<argLine>-Dbrowser='${browser}' -Dcontext.root='${context.root}' -Dcontext.path='${context.path}' -Dselenium.port='${selenium.port}'</argLine>
+								</configuration>
+							</execution>
+						</executions>
+					</plugin>
 				</plugins>
 			</build>
 		</profile>
+		<!--  Container Profile -->
 		<profile>
-			<id>unix</id>
+			<id>container</id>
 			<activation>
-				<os>
-					<family>unix</family>
-				</os>
+				<property>
+					<name>containerId</name>
+				</property>
 			</activation>
-			<properties>
-				<os.family>unix</os.family>
-			</properties>
+			<dependencies>
+				<dependency>
+					<groupId>org.richfaces.samples</groupId>
+					<artifactId>richfaces-demo</artifactId>
+					<version>${demo.version}</version>
+					<type>war</type>
+					<scope>provided</scope>
+				</dependency>
+			</dependencies>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.codehaus.cargo</groupId>
+						<artifactId>cargo-maven2-plugin</artifactId>
+						<version>1.0-beta-2</version>
+						<executions>
+							<execution>
+								<id>start-container</id>
+								<phase>pre-integration-test</phase>
+								<goals>
+									<goal>start</goal>
+									<goal>deploy</goal>
+								</goals>
+							</execution>
+							<execution>
+								<id>stop-container</id>
+								<phase>post-integration-test</phase>
+								<goals>
+									<goal>stop</goal>
+								</goals>
+							</execution>
+						</executions>
+						<configuration>
+							<wait>false</wait>
+							<container>
+								<containerId>${containerId}</containerId>
+								<append>false</append>
+								<zipUrlInstaller>
+									<url>${container.installer.url}</url>
+									<installDir>${project.basedir}/target/installs</installDir>
+								</zipUrlInstaller>
+							</container>
+							<configuration>
+								<properties>
+									<cargo.hostname>localhost</cargo.hostname>
+									<cargo.jvmargs>-Xms256m -Xmx512m -XX:PermSize=256m -XX:MaxPermSize=512m -XX:+UseConcMarkSweepGC -XX:+CMSPermGenSweepingEnabled -XX:+CMSClassUnloadingEnabled -Dsun.rmi.dgc.client.gcInterval=3600000 -Dsun.rmi.dgc.server.gcInterval=3600000</cargo.jvmargs>
+								</properties>
+							</configuration>
+							<deployer>
+								<type>installed</type>
+								<deployables>
+									<deployable>
+										<groupId>org.richfaces.samples</groupId>
+										<artifactId>richfaces-demo</artifactId>
+										<type>war</type>
+										<pingURL>${context.root}${context.path}</pingURL>
+										<properties>
+											<context>${context.path}</context>
+										</properties>
+									</deployable>
+								</deployables>
+							</deployer>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
 		</profile>
+		<!-- Container-type specifics: JBoss AS 5.X -->
 		<profile>
-			<id>windows</id>
+			<id>container-jboss5x</id>
 			<activation>
-				<os>
-					<family>windows</family>
-				</os>
+				<property>
+					<name>containerId</name>
+					<value>jboss5x</value>
+				</property>
 			</activation>
 			<properties>
-				<os.family>windows</os.family>
+				<container.version>5.1.0.GA</container.version>
+				<container.home>${project.build.directory}/installs/jboss-${container.version}/jboss-${container.version}</container.home>
+				<container.installer.url>http://downloads.sourceforge.net/project/jboss/JBoss/JBoss-${container.version}/jboss-${container.version}.zip</container.installer.url>
 			</properties>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.codehaus.cargo</groupId>
+						<artifactId>cargo-maven2-plugin</artifactId>
+						<version>1.0-beta-2</version>
+						<executions>
+							<execution>
+								<id>undeploy-container</id>
+								<phase>post-integration-test</phase>
+								<goals>
+									<goal>undeploy</goal>
+								</goals>
+							</execution>
+						</executions>
+						<configuration>
+							<configuration>
+								<home>${container.home}/server/default</home>
+								<type>existing</type>
+								<properties>
+									<cargo.jboss.configuration>default</cargo.jboss.configuration>
+									<cargo.rmi.port>1099</cargo.rmi.port>
+								</properties>
+							</configuration>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
 		</profile>
+		<!--  Container: Tomcat 6.X -->
 		<profile>
-			<id>mac</id>
+			<id>container-tomcat6x</id>
 			<activation>
-				<os>
-					<family>mac</family>
-				</os>
+				<property>
+					<name>containerId</name>
+					<value>tomcat6x</value>
+				</property>
 			</activation>
 			<properties>
-				<os.family>mac</os.family>
+				<container.version>6.0.20</container.version>
+				<container.home>${project.build.directory}/installs/apache-tomcat-${container.version}/apache-tomcat-${container.version}</container.home>
+				<container.installer.url>http://www.apache.org/dist/tomcat/tomcat-6/v6.0.20/bin/apache-tomcat-6.0.20.zip</container.installer.url>
 			</properties>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.codehaus.cargo</groupId>
+						<artifactId>cargo-maven2-plugin</artifactId>
+						<version>1.0-beta-2</version>
+						<configuration>
+							<configuration>
+							</configuration>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
 		</profile>
 	</profiles>
 	<dependencies>
